improve layout on smaller screens (thanks to Steve Lee fixes wookie-291
git-svn-id: https://svn.apache.org/repos/asf/incubator/wookie/trunk@1202806 13f79535-47bb-0310-9956-ffa450edef68

--- a/widgets/templates/browse/style/media.css
+++ b/widgets/templates/browse/style/media.css
@@ -15,19 +15,6 @@
  * limitations under the License.
  */
 
-/* TODO use templates as above */
-@media ${widget.media.screen.narrow},
-       ${widget.media.screen.moderateWidth},
-       ${widget.media.screen.wide},
-       ${widget.media.screen.veryWide} {
-  .ui-grid-a .ui-block-a,
-  .ui-grid-a .ui-block-b {
-	float: none;
-	width: 100%;
-  }
-}
-
-
  @media ${widget.media.screen.veryNarrow}, ${widget.media.screen.narrow} {
     .content-secondary {
 	text-align: left;
